# offseason-shelter-for-science

./: .gitignore  LICENSE  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: dispatcher-docker-manual.yml  dispatcher-docker.yml  priorizer-docker-manual.yml  priorizer-docker.yml
analyze/mvp_quick_win_202508/: 1_organizations_to_csv.py  2_most_popular_datasets_to_json.py  3_datasets_to_use_case_prompt.py  4_request_ai.py  5_build_results.py  pyproject.toml
analyze/mvp_quick_win_202508/ai/api/: manager.py  model.py  result.py  spending.py
analyze/mvp_quick_win_202508/ai/api/mock/: manager.py  model.py
analyze/mvp_quick_win_202508/ai/api/openai/: manager.py  model.py
analyze/mvp_quick_win_202508/data/: most_popular_dataset_use_case_prompt.tpl  most_popular_datasets_20250805_145133.json  organizations_20250804_204057_enriched.csv
analyze/mvp_quick_win_202508/user_input/: question.py
data.gov/: README.md  fetch_resources_head_info.py  nocodb_inserter.py  retriever.py
data.gov/ckan/: dataset.py  organization.py  package_search.py  resource.py
data/db/: mapping.json  projects.json
datagov/: README.md  asset_retrieval.py  asset_to_db.py  dataset_ranking_to_db.py  fetch_resources_head_info.py  harvest_sources_to_db.py  json_to_db.py  json_to_tabular.py  main.py  nocodb_inserter.py  nocodb_updater.py  pipelines.py  retrieval_check.py  retriever.py  url_mapping_builder.py
datagov/asset/: Dockerfile  README.md  asset.py  collector.py  docker-compose.yml  link_scraper.py  main.py  manager.py  redis_cache.py  requirements.txt
datagov/asset/collector/: collector.py  manager.py  spiders.py  web_directory.py
datagov/asset/init_sprider.py/: link_spider.py
datagov/asset/output/default_scraping/: results.json
datagov/asset/pipelines/: file_info_pipeline.py
datagov/asset/spiders/: link_spider.py
datagov/ckan/: dataset.py  model_manager.py  organization.py  package_search.py  resource.py
datagov/tabular/: builder.py
dispatcher/: .env.dev  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  publish_image.sh  pyproject.toml  requirement.txt  run_docker_dev.sh
dispatcher/api/: dispatcher_service.py
dispatcher/api/data/: ranker_mock.json  rescues_mock.json
dispatcher/api/mock/: mock_data.json
dispatcher/api/models/: logic.py  payload.py  priorizer_client.py  state.py
dispatcher/api/routers/: dispatch.py
dispatcher/dev/: pyproject.toml
dispatcher_api/: README.md  main.py  requirements.txt
dispatcher_api/data/: allocations.json  ckan_mock.json
install/: install.sh
nocodb/: README.md  api.py  models.py  project.py  tables.py  updaters.py  utils.py
priorizer/: .env.dev  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  publish_image.sh  pyproject.toml
priorizer/api/: priorizer_service.py
priorizer/api/data/: ckan_mock.json
priorizer/api/mock/: mock_data.json
priorizer/api/models/: logic.py  priorizer.py  state.py
priorizer/api/routers/: priorizer.py
priorizer/data/: allocations.json
priorizer/dev/: pyproject.toml
priorizer/dispatcher/: logic.py  schemas.py
rescue-db/rescue_api/: database.py  settings.py
rescue-db/rescue_api/entities/: asset.py  dataset.py
rescue-db/rescue_api/models/: __init__.py  asset.py  dataset.py  organization.py  resource.py
rescue_db/rescue_api/entities/: __init__.py
rescue_db/rescue_api/models/: asset.py  rescues.py
test/datagov/ckan/: test_resource.py
test/dispatcher/: test_dispatcher.py
test/nocodb/: test_updaters.py
test/priorizer/: test_priorizer.py
