[project]
name = "priorizer-api"
version = "0.1.0"
description = "Rank and serve a list of assets"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic_core>=2.33.2",
    "python-dotenv>=1.1.1",
    "starlette>=0.47.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.1",
    "uvicorn==0.35.0",
    "pandas>=2.3.1",
    "alembic==1.16.4",
    "greenlet==3.2.4",
    "mako==1.3.10",
    "sqlalchemy==2.0.43"
]
